--- a/app/views/bookslists/edit.html.erb
+++ b/app/views/bookslists/edit.html.erb
@@ -1,3 +1,9 @@
+<% if flash[:notice] %>
+	<div class="flash">
+		<%= flash[:notice] %>
+	</div>
+<% end %>
+
 <h1>Editing Book</h1>
 <%= form_for(@list,url:"/bookslists/#{@list.id}") do |f| %>
 	<h4>Title</h4>
@@ -6,3 +12,6 @@
 	<%= f.text_area :body %>
 	<%= f.submit 'Update Book' %>
 <% end %>
+
+<%= link_to "Show", bookslist_path(@list.id) %>
+<%= link_to "Back", bookslists_path(@list.id) %>
