--- a/app/views/bookslists/index.html.erb
+++ b/app/views/bookslists/index.html.erb
@@ -20,3 +20,15 @@
 	</tbody>
 </table>
 
+<h1>New book</h1>
+
+<%= form_for(@list, url: '/bookslists') do |f| %>
+
+	<h4>Title</h4>
+	<%= f.text_field :title %>
+
+	<h4>Body</h4>
+	<%= f.text_field :body %>
+
+	<%= f.submit 'Create Book' %>
+<% end %>
