--- a/app/views/bookslists/new.html.erb
+++ b/app/views/bookslists/new.html.erb
@@ -1,7 +1,10 @@
 <h1>New book</h1>
 
 <%= form_for(@list, url: '/bookslists') do |f| %>
-
+  <%= render 'layouts/error_messages', model: f.object %>
+   <% if @list.errors.any? %>
+   		<p>error</p>
+   <% end %>
 	<h4>Title</h4>
 	<%= f.text_field :title %>
 
