--- a/app/views/bookslists/show.html.erb
+++ b/app/views/bookslists/show.html.erb
@@ -1,3 +1,9 @@
+<% if flash[:notice] %>
+	<div class="flash">
+		<%= flash[:notice] %>
+	</div>
+<% end %>
+
 <h2>Title</h2>
 <p><%= @list.title %></p>
 <h2>Body</h2>
