--- a/app/views/homes/top.html.erb
+++ b/app/views/homes/top.html.erb
@@ -1,1 +1,7 @@
-<h1>Books</h1>
+<h1>ようこそ Bookersへ！</h1>
+<p>
+	<span>Bookers</span>では、様々な書籍に関するあなたの意見や<<br>
+	印象を共有し交換することができます
+</p>
+
+<%= link_to 'start', "/bookslists/" %>
