--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,61 @@
  *= require_tree .
  *= require_self
  */
+
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+main {
+	margin: 30px;
+}
+
+h1 {
+	font-size: 25px;
+}
+
+.top-header {
+	font-size: 25px;
+}
+
+p {
+	padding-left: 25px;
+	font-size: 13px;
+	line-height: 300%;
+}
+
+span {
+	font-weight: bold;
+}
+
+.top-link {
+	font-size: 13px;
+	padding-left: 25px;
+}
+
+.flash {
+	color: green;
+	font-size: 13px;
+	margin-top: 20px;
+}
+
+td {
+	font-size: 13px;
+	line-height: 27px;
+}
+
+.edit-link, .show-link {
+	font-size: 13px;
+}
+
+.index-link {
+	font-size: 13px;
+	padding-left: 25px;
+}
+
+.show-title {
+	font-weight: bold;
+	line-height: 50px;
+}
