--- a/app/views/bookslists/index.html.erb
+++ b/app/views/bookslists/index.html.erb
@@ -1,34 +1,36 @@
-<h1>Books</h1>
-<table >
-	<thead>
-		<tr>
-			<th>Title</th>
-			<th>Body</th>
-			<th colspan="5"></th>
-		</tr>
-	</thead>
-	<tbody>
-		<% @lists.each do |list| %>
-		<tr>
-			<td><%= list.title %></td>
-			<td><%= list.body %></td>
-			<td><%= link_to "Show", bookslist_path(list.id) %></td>
-			<td><%= link_to "Edit", edit_bookslist_path(list.id) %></td>
-			<td><%= link_to "Destroy", destroy_bookslist_path(list.id), method: :delete, "data-confirm" => "Are you sure?" %></td>
-		</tr>
-		<% end %>
-	</tbody>
-</table>
+<main>
+	<h1>Books</h1>
+	<table >
+		<thead>
+			<tr>
+				<th>Title</th>
+				<th>Body</th>
+				<th colspan="5"></th>
+			</tr>
+		</thead>
+		<tbody>
+			<% @books.each do |book| %>
+			<tr>
+				<td><%= book.title %></td>
+				<td><%= book.body %></td>
+				<td><%= link_to "Show", book_path(book.id), {class: "index-link"} %></td>
+				<td><%= link_to "Edit", edit_book_path(book.id), {class: "index-link"} %></td>
+				<td><%= link_to "Destroy", destroy_book_path(book.id), class: "index-link", method: :delete, "data-confirm" => "Are you sure?" %></td>
+			</tr>
+			<% end %>
+		</tbody>
+	</table>
 
-<h1>New book</h1>
+	<h3>New book</h3>
 
-<%= form_for(@list, url: '/bookslists') do |f| %>
+	<%= form_for(@book, url: '/book') do |f| %>
+	  <%= render 'layouts/error_messages', model: f.object %>
+		<h5>Title</h5>
+		<%= f.text_field :title %>
 
-	<h4>Title</h4>
-	<%= f.text_field :title %>
+		<h5>Body</h5>
+		<%= f.text_field :body %>
 
-	<h4>Body</h4>
-	<%= f.text_field :body %>
-
-	<%= f.submit 'Create Book' %>
-<% end %>
+		<%= f.submit 'Create Book' %>
+	<% end %>
+</main>
