--- a/app/views/bookslists/new.html.erb
+++ b/app/views/bookslists/new.html.erb
@@ -1,14 +1,12 @@
-<h1>New book</h1>
+<h3>New book</h3>
 
-<%= form_for(@list, url: '/bookslists') do |f| %>
+<%= form_for(@book, url: '/book') do |f| %>
   <%= render 'layouts/error_messages', model: f.object %>
-   <% if @list.errors.any? %>
-   		<p>error</p>
-   <% end %>
-	<h4>Title</h4>
+   
+	<h5>Title</h5>
 	<%= f.text_field :title %>
 
-	<h4>Body</h4>
+	<h5>Body</h5>
 	<%= f.text_field :body %>
 
 	<%= f.submit 'Create Book' %>
